# dataops-platform

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: data_quality_dag.py  etl_pipeline.py
architecture/: architecture.md
docs/: architecture.md
helm/: Chart.yaml
src/: main.py
src/dataops/: __init__.py  config.py  lineage.py  logging_config.py  main.py  models.py  orchestration.py  quality.py  service.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: backend.hcl  terraform.tfvars.example
terraform/environments/prod/: backend.hcl  terraform.tfvars.example
terraform/modules/network/: main.tf  outputs.tf  variables.tf
tests/: test_health.py  test_lineage.py  test_orchestration.py  test_quality.py
