[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-platform"
version = "0.1.0"
description = "DataOps platform: pipeline orchestration, data quality, and data lineage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Sawant" }]
keywords = ["dataops", "orchestration", "data-quality", "data-lineage", "etl", "airflow"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "networkx>=3.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[project.scripts]
dataops = "dataops.main:run"

[project.urls]
Homepage = "https://github.com/abhisheksawant52/dataops-platform"
Issues = "https://github.com/abhisheksawant52/dataops-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
